# matplotlib-haskell

./: .gitignore  README.md  cabal-shell.nix  circle.yml  default.nix  default2.nix  geneate-table.py  imgur.sh  matplotlib.cabal  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: CI.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
nix/: sources.json
src/Graphics/: Matplotlib.hs
src/Graphics/Matplotlib/: Internal.hs
test/: Spec.hs
